<resources>
    <string name="app_name">Goiás Tropical</string>
    <string name="title_home">Mural</string>
    <string name="title_dashboard">Ocorrências</string>
    <string name="title_notifications">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load_tasks">Carregando as Notícias!</string>
    <string name="load_tasks_ocorrencia">Carregando seu histórico de ocorrências!</string>
    <string name="button_register">Registrar-se</string>
    <string name="hint_email">Email</string>
    <string name="button_forgot_password">Esqueceu a senha?</string>
    <string name="label_enter">Entrar</string>
    <string name="hint_password">Senha</string>
    <string name="error_connection">Você não tem conexão.</string>
    <string name="label_wait">Aguarde</string>
    <string name="hint_name">Nome</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_usuario">Usuário</string>
    <string name="button_cadastro">Concluir cadastro</string>
    <string name="lb_categoria">Categorias</string>
    <string name="lb_descricao">Descrição</string>
    <string name="lb_titulo">Título</string>
    <string name="str_enviar">Enviar</string>
    <string name="lb_localizacao">Localização</string>
    <string name="entra">FAZER LOGIN</string>
    <string name="avisoLogin">Você ainda não está logado no sistema.</string>
    <string name="nome">Nome:</string>
    <string name="cpf">CPF:</string>
    <string name="usuario">Usuário:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">E-mail:</string>
    <string name="button_aualizar">ATUALIZAR DADOS</string>
    <string name="button_dados_atualizar">EDITAR PERFIL</string>
    <string name="hint_password_nova">Nova senha:</string>
    <string name="msg_recuperar">Você receberar por e-mail o link e as instruções para recuperar a senha. Para isso informe o e-mail cadastrado no campo abaixo e clique em \"recuperar senha\".</string>
    <string name="button_recuperar">recuperar senha</string>
</resources>
