<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".presenter.activity.Activity_criar_ocorrencia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lb_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_categoria"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp" />

        <Spinner
            android:id="@+id/simple_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/lbl_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_titulo"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:layout_editor_absoluteY="119dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_descricao"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:layout_editor_absoluteY="119dp" />

        <TextView
            android:id="@+id/lbl_localizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_localizacao"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_enviar"
            android:layout_marginTop="5dp"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:onClick="saveOccurrence"/>
    </LinearLayout>
</ScrollView>