<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.activity.AtualizarPerfilActivity">

    <RelativeLayout
        android:id="@+id/container_atualizar_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/button_close_atualizar_cadastro"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/colorPrimaryDark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_atualizar_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_close_atualizar_cadastro"
            >

            <EditText
                android:id="@+id/input_atualizar_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_atualizar_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_atualizar_name"
            >

            <EditText
                android:id="@+id/input_atualizar_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cpf"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:digits="0123456789"
            android:id="@+id/container_atualizar_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_atualizar_cpf"
            >

            <EditText
                android:id="@+id/input_atualizar_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefone"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_atualizar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_atualizar_telefone"
            >

            <EditText
                android:id="@+id/input_atualizar_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_atualizar_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_atualizar_email"
            >

            <EditText
                android:id="@+id/input_atualizar_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usuario"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_atualizar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_atualizar_usuario">

            <EditText
                android:id="@+id/input_atualizar_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_nova"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/red_500" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button_register_atualizar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_aualizar"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>