<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/container_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/button_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/brasao_goiania"
            android:layout_below="@+id/button_close"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_email">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/red_500" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/container_password"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/label_enter"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@id/button_login"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:text="@string/button_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>




</android.support.constraint.ConstraintLayout>